# resume-parser

./: .env  .gitignore  MODEL_SERVICE_README.md  README.md  package-lock.json  start-dev.sh  start_with_memory_optimization.sh
backend/: .gitignore  candidates.db  model_service.py  pyproject.toml  set_cuda_env.py
backend/app/: common_utils.py  config.py  craft_prompt.py  crud.py  db.py  db_models.py  llm_client.py  logger.py  main.py  model_config_loaders.py  model_manager.py  model_utils.py  process.py  schemas.py
backend/app/models/: __init__.py  handlers.py  manager.py  utils.py
backend/app/prompts/: resume_analyzer.txt  system_prompt.txt
backend/app/routers/: applications.py  candidates.py  jobs.py  models.py  status.py  upload.py  user.py
backend/scripts/: batch_process_resumes.py  example_llm_infer.py  seed_db.py  start_model_service.py  test_llm.py
backend/tests/: README.md  test_integration.py  test_llm.py  test_routes.py
backend/wheat_from_chaff_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
config/: config.yaml  dev.yaml  models.yaml  prod.yaml
data_retriever/: README.md  pyproject.toml  retriever.py
frontend/: .env.development  .env.production  .gitignore  README.md  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  page.tsx
frontend/components/: CandidatesTable.tsx  ControlButtons.tsx  CreateJobModal.tsx  Header.tsx  JobDescriptionModal.tsx  JobSelector.tsx  ModelSelector.tsx  NotificationPopup.tsx  SystemStatus.tsx
frontend/hooks/: useCandidates.ts  useJobs.ts  useModels.ts  useSystemStatus.ts
